<resources>
    <string name="app_name">toWatch</string>

    <string-array name="websites">
        <item>Netflix</item>
        <item>Prime Video</item>
        <item>Disney+</item>
        <item>Crunchyroll</item>
        <item>Hulu</item>
        <item>HBO Max</item>
        <item>Custom</item>
    </string-array>

    <!-- Common Strings -->
    <string name="inName">Name</string>
    <string name="yes">Yes</string>

    <!-- Websites -->
    <string name="netflix" translatable="false">Netflix</string>
    <string name="primevideo" translatable="false">Prime Video</string>
    <string name="disney" translatable="false">Disney+</string>
    <string name="crunchyroll" translatable="false">Crunchyroll</string>
    <string name="hulu" translatable="false">Hulu</string>
    <string name="hbomax" translatable="false">HBO Max</string>
    <string name="custom">Others</string>

    <!-- MainActivity -->
    <string name="moreMoviesFounded">movies founded.</string>
    <string name="oneMovieFounded">1 movie founded.</string>
    <string name="errorRemove">Error removing </string>
    <string name="removed">removed.</string>
    <string name="noMovies">No movies.</string>
    <string name="noResults">No results.</string>
    <string name="noUrlMain">"No URL for "</string>
    <string name="errorStatusMain">Error in status.</string>
    <string name="toWatch">To watch</string>
    <string name="watched">Watched</string>
    <string name="watching">Watching</string>
    <string name="errorFavoriteMain">Error in favorite.</string>
    <string name="isFav">is a favorite!</string>
    <string name="isNoFav">is no longer a favorite.</string>

    <!-- AddMovie -->
    <string name="fillFieldsAdd">Fill all fields!</string>
    <string name="errorAdd">Error adding movie!</string>
    <string name="addedMovie">Movie added!</string>
    <string name="customAdd">Custom</string>
    <string name="errorNetflixUrl">Insert netflix URL!</string>
    <string name="inUrl">URL (optional)</string>
    <string name="btnConfirmAdd">CONFIRM</string>
    <string name="btnCancelAdd">CANCEL</string>
    <string name="btnUrl">Netflix URL</string>
    <string name="addNewMovie">Add new movie</string>
    <string name="image">Image:</string>
    <string name="errorUrl">Can\'t add title!</string>
    <string name="errorConnection">You need internet connection to use a Netflix URL!</string>
    <string name="retry">Retry</string>

    <!-- Settings -->
    <string name="nightMode">Night Mode</string>
    <string name="btnBackSettings">BACK</string>

    <!-- FilterMovies -->
    <string name="noFilters">Filters are empty!</string>
    <string name="favorite">Favorite</string>
    <string name="noFavorite">Not favorite</string>
    <string name="selectFilters">Select filters.</string>
    <string name="btnApply">APPLY</string>
    <string name="btnReset" translatable="false">RESET</string>

    <!-- RemoveDialog -->
    <string name="attention">Attention!</string>
    <string name="confirmRem">Do you want to delete this movie?</string>

</resources>